--- a/front/src/lib/styles/base/utilities.css
+++ b/front/src/lib/styles/base/utilities.css
@@ -12,8 +12,8 @@
     --background-saturated: 246, 250, 245;
     --background-pre-rgb: 254, 255, 245;
     --background-pre-highlight-rgb: 243, 250, 157;
-    --btn--secondary-rgb: 170	45	64;
-    --btn-secondary-highlight-rgb: 233,	223, 212;
+    --btn--secondary-rgb: 170, 45, 64;
+    --btn-secondary-highlight-rgb: 233, 223, 212;
     --highlight-rgb: 145, 15, 35;
     --subdued-rgb: 232, 234, 205;
     --transform-duration: 500ms;
