--- a/front/static/styles/noscript.css
+++ b/front/static/styles/noscript.css
@@ -14,7 +14,7 @@ body .footer {
 .image-loader {
   display: none;
 }
-.syntax-highlighter 
+.syntax-highlighter {
   .language {
     padding-right: 0.75rem;
   }
