--- a/front/src/lib/styles/components/nav.css
+++ b/front/src/lib/styles/components/nav.css
@@ -60,13 +60,15 @@
     py-1
     align-text-top
     text-sm;
-  transition: color var(--transform-duration), border-color 333ms;
+  transition:
+    color var(--transform-duration),
+    border-color 333ms;
   border-bottom-color: rgab(var(--foreground-rgb), 0.5);
   color: rgba(var(--text-accent-rgb), 0.5);
   &:hover,
   &:focus {
-    color: rgba(var(--text-accent-rgb), 1);
     border-bottom-color: rgba(var(--highlight-rgb), 1);
+    color: rgba(var(--text-accent-rgb), 1);
   }
   &.active {
     opacity: 1;
