--- a/front/src/lib/styles/base/colors.css
+++ b/front/src/lib/styles/base/colors.css
@@ -1,195 +1,118 @@
-/* DARK PALETTE */
-
 :root {
-  /* CSS HEX */
+  /* DARK COLORS */
+
+  /* HEX */
   --sandy-brown: #fc9f5bff;
   --mountbatten-pink: #a27e8eff;
   --bright-green: #5aff15ff;
   --bistre: #2e1e0fff;
   --yellow-green: #9fcc2eff;
 
-  /* CSS RGB */
+  /* RGB */
   --sandy-brown-rgb: 252, 159, 91;
   --mountbatten-pink-rgb: 162, 126, 142;
   --bright-green-rgb: 90, 255, 21;
   --bistre-rgb: 46, 30, 15;
   --yellow-green-rgb: 159, 204, 46;
 
-  /* CSS HSL */
+  /* HSL */
   --sandy-brown: hsla(25, 96%, 67%, 1);
   --mountbatten-pink: hsla(333, 16%, 56%, 1);
   --bright-green: hsla(102, 100%, 54%, 1);
   --bistre: hsla(29, 51%, 12%, 1);
   --yellow-green: hsla(77, 63%, 49%, 1);
 
-  /* CSS Gradient */
-  --gradient-top: linear-gradient(
-    0deg,
-    #fc9f5bff,
-    #a27e8eff,
-    #5aff15ff,
-    #2e1e0fff,
-    #9fcc2eff
-  );
-  --gradient-right: linear-gradient(
-    90deg,
-    #fc9f5bff,
-    #a27e8eff,
-    #5aff15ff,
-    #2e1e0fff,
-    #9fcc2eff
-  );
-  --gradient-bottom: linear-gradient(
-    180deg,
-    #fc9f5bff,
-    #a27e8eff,
-    #5aff15ff,
-    #2e1e0fff,
-    #9fcc2eff
-  );
-  --gradient-left: linear-gradient(
-    270deg,
-    #fc9f5bff,
-    #a27e8eff,
-    #5aff15ff,
-    #2e1e0fff,
-    #9fcc2eff
-  );
-  --gradient-top-right: linear-gradient(
-    45deg,
-    #fc9f5bff,
-    #a27e8eff,
-    #5aff15ff,
-    #2e1e0fff,
-    #9fcc2eff
-  );
-  --gradient-bottom-right: linear-gradient(
-    135deg,
-    #fc9f5bff,
-    #a27e8eff,
-    #5aff15ff,
-    #2e1e0fff,
-    #9fcc2eff
-  );
-  --gradient-top-left: linear-gradient(
-    225deg,
-    #fc9f5bff,
-    #a27e8eff,
-    #5aff15ff,
-    #2e1e0fff,
-    #9fcc2eff
-  );
-  --gradient-bottom-left: linear-gradient(
-    315deg,
-    #fc9f5bff,
-    #a27e8eff,
-    #5aff15ff,
-    #2e1e0fff,
-    #9fcc2eff
-  );
-  --gradient-radial: radial-gradient(
-    #fc9f5bff,
-    #a27e8eff,
-    #5aff15ff,
-    #2e1e0fff,
-    #9fcc2eff
-  );
-}
+  /* LIGHT COLORS */
 
-/* LIGHT COLORS */
-
-:root {
-  /* CSS HEX */
+  /* HEX */
   --jasper: #cd533bff;
   --true-blue: #4062bbff;
   --lemon-chiffon: #f1f0ccff;
   --persian-pink: #ee92c2ff;
   --russian-violet: #0b0033ff;
 
-  /* SCSS HSL */
+  /* HSL */
   --jasper-hsl: 10, 59%, 52%;
   --true-blue-hsl: 223, 49%, 49%;
   --lemon-chiffon-hsl: 58, 57%, 87%;
   --persian-pink-hsl: 329, 73%, 75%;
   --russian-violet-hsl: 253, 100%, 10%;
 
-  /* SCSS RGB */
+  /* RGB */
   --jasper-rgb: 205, 83, 59;
   --true-blue-rgb: 64, 98, 187;
   --lemon-chiffon-rgb: 241, 240, 204;
   --persian-pink-rgb: 238, 146, 194;
   --russian-violet-rgb: 11, 0, 51;
 
-  /* SCSS Gradient */
-  --gradient-top: linear-gradient(
-    0deg,
-    #cd533bff,
-    #4062bbff,
-    #f1f0ccff,
-    #ee92c2ff,
-    #0b0033ff
-  );
-  --gradient-right: linear-gradient(
-    90deg,
-    #cd533bff,
-    #4062bbff,
-    #f1f0ccff,
-    #ee92c2ff,
-    #0b0033ff
-  );
-  --gradient-bottom: linear-gradient(
-    180deg,
-    #cd533bff,
-    #4062bbff,
-    #f1f0ccff,
-    #ee92c2ff,
-    #0b0033ff
-  );
-  --gradient-left: linear-gradient(
-    270deg,
-    #cd533bff,
-    #4062bbff,
-    #f1f0ccff,
-    #ee92c2ff,
-    #0b0033ff
-  );
-  --gradient-top-right: linear-gradient(
-    45deg,
-    #cd533bff,
-    #4062bbff,
-    #f1f0ccff,
-    #ee92c2ff,
-    #0b0033ff
-  );
-  --gradient-bottom-right: linear-gradient(
-    135deg,
-    #cd533bff,
-    #4062bbff,
-    #f1f0ccff,
-    #ee92c2ff,
-    #0b0033ff
-  );
-  --gradient-top-left: linear-gradient(
-    225deg,
-    #cd533bff,
-    #4062bbff,
-    #f1f0ccff,
-    #ee92c2ff,
-    #0b0033ff
-  );
-  --gradient-bottom-left: linear-gradient(
-    315deg,
-    #cd533bff,
-    #4062bbff,
-    #f1f0ccff,
-    #ee92c2ff,
-    #0b0033ff
-  );
-  --gradient-radial: radial-gradient(
-    #cd533bff,
-    #4062bbff,
-    #f1f0ccff,
-    #ee92c2ff,
-    #0b0033ff
-  );
+  --clr-neut-50: #f6f6f6;
+  --clr-neut-100: #ececec;
+  --clr-neut-200: #dedede;
+  --clr-neut-300: #cacaca;
+  --clr-neut-400: #a5a5a5;
+  --clr-neut-500: #838383;
+  --clr-neut-600: #5d5d5d;
+  --clr-neut-700: #4a4a4a;
+  --clr-neut-800: #2c2c2c;
+  --clr-neut-900: #0b0b0b;
+  --clr-neut: var(--clr-primary-900);
+
+  /* DARK PALETTE */
+  --clr-sand-50: #fff9e7;
+  --clr-sand-100: #ffeec3;
+  --clr-sand-200: #ffe49f;
+  --clr-sand-300: #ffda7e;
+  --clr-sand-400: #ffd06c;
+  --clr-sand-500: #ffca68;
+  --clr-sand-600: #ffbd62;
+  --clr-sand-700: #ffac5e;
+  --clr-sand-800: #fc9e5b;
+  --clr-sand: var(--clr-sand-800);
+  --clr-sand-900: #f48657;
+  --clr-sand-comp-50: #e2f3fe;
+  --clr-sand-comp-100: #b9e0fd;
+  --clr-sand-comp-200: #8ccdfd;
+  --clr-sand-comp-300: #5bb9fc;
+  --clr-sand-comp: var(--clr-sand-comp-300);
+  --clr-sand-comp-400: #2da9fd;
+  --clr-sand-comp-500: #009bfb;
+  --clr-sand-comp-600: #008ded;
+  --clr-sand-comp-700: #007bda;
+  --clr-sand-comp-800: #0069c8;
+  --clr-sand-comp-900: #004ba9;
+
+  --clr-pink-50: #f9e6eb;
+  --clr-pink-100: #ddc5cf;
+  --clr-pink-200: #bea1ae;
+  --clr-pink-300: #a17d8d;
+  --clr-pink: var(--clr-pink-300);
+  --clr-pink-400: #8b6275;
+  --clr-pink-500: #76475e;
+  --clr-pink-600: #6a3f55;
+  --clr-pink-700: #5a3448;
+  --clr-pink-800: #49293d;
+  --clr-pink-900: #381d30;
+
+  --clr-blistre-50: #ede9e3;
+  --clr-blistre-100: #d0c8be;
+  --clr-blistre-200: #b0a395;
+  --clr-blistre-300: #8f806c;
+  --clr-blistre-400: #78654e;
+  --clr-blistre-500: #614c30;
+  --clr-blistre-600: #57432a;
+  --clr-blistre-700: #493722;
+  --clr-blistre-800: #3c2b1a;
+  --clr-blistre-900: #2e1e0f;
+  --clr-blistre: var(--clr-blistre-900);
+  --clr-blist-comp-50: #e4ecf9;
+  --clr-blist-comp-100: #c1d0df;
+  --clr-blist-comp-200: #9fb0c3;
+  --clr-blist-comp-300: #7c90a7;
+  --clr-blist-comp-400: #637a93;
+  --clr-blist-comp-500: #4a6480;
+  --clr-blist-comp-600: #3d5770;
+  --clr-blist-comp-700: #2f445a;
+  --clr-blist-comp-800: #203245;
+  --clr-blist-comp-900: #0f1f2e;
+  --clr-blist-comp: var(--clr-blist-comp-900);
 }
