--- a/front/src/lib/styles/base/utilities.css
+++ b/front/src/lib/styles/base/utilities.css
@@ -1,6 +1,11 @@
+:root {
+  --transition-duration: 500ms;
+  --transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}
+
 @layer utilities {
   .dg--transition-effect {
-    transition-duration: var(--transform-duration);
-    transition-timing-function: var(--transform-timing-function);
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--transition-timing-function);
   }
 }
