--- a/front/src/lib/styles/pages/home.css
+++ b/front/src/lib/styles/pages/home.css
@@ -12,8 +12,10 @@
   @apply dg--transition-effect;
   .bio-picture {
     position: relative;
+    opacity: 0.8;
     z-index: 5;
     transition-property: border-color, opacity;
+    transition-timing-function: var(--transition-timing-function);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
       var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
     border: 1px solid rgba(var(--foreground-rgb), 0.5);
@@ -22,8 +24,14 @@
     height: 120px;
     @apply dg--transition-effect;
   }
+  &:hover {
+    .bio-picture {
+      opacity: 1;
+    }
+  }
   h1.headline {
     transition: color, font-size;
+    color: var(--home-h1-fg-clr);
     @apply dg--transition-effect
       dg--font-psb
       pt-7
@@ -70,16 +78,15 @@
     line-height: 1;
     a {
       transition-property: color;
-      color: rgb(var(--foreground-rgb-faded));
+      color: var(--soc-links-fg-clr);
       @apply dg--transition-effect;
       @apply inline-block
         h-full
         self-center
         p-1;
       &:hover,
-      &:focus,
       &:focus {
-        color: rgb(var(--highlight-rgb));
+        color: var(--soc-links-fg-hover-clr);
       }
     }
     svg {
