chore(front): updates color shaes, readme thank youse, adds `box-shadow` tokens

--- a/front/src/lib/styles/base/colors-dark.css
+++ b/front/src/lib/styles/base/colors-dark.css
@@ -1,10 +1,9 @@
 :root {
   --moon: #d4cdc5ff;
+  --moonshine: #d4cdc51f;
   --light: #fce2b2ff;
   --light-5: #fce2b20c;
   --light-10: #fce2b219;
-  --light-33: #fce2b259;
-  --light-50: #fce2b27f;
   --turkey-red: #a60800ff;
   --blistre: #2e1e0fff;
   --celestial: #e3f6ffff;
