--- a/front/src/lib/styles/base/colors-light.css
+++ b/front/src/lib/styles/base/colors-light.css
@@ -1,6 +1,9 @@
 :root {
   --sun: #fadd82ff;
+  --sunshine: #fadd821f;
+  --sun-a35: #fadd8259;
   --lemon: #f1f0ccff;
+  --lemon-50: #fdfdeeff;
   --jasper: #cd533bff;
   --orange: #f6aa1cff;
   --sand: #fc9f5bff;
@@ -8,4 +11,5 @@
   --blue: #4062bbff;
   --violet: #0b0033ff;
   --blacktop: #18020cff;
+  --shadow-clr: 0deg, 79%, 0%;
 }
