--- a/front/src/lib/styles/base/transitions.css
+++ b/front/src/lib/styles/base/transitions.css
@@ -40,6 +40,7 @@ body {
     }
     &.animating {
       overflow: hidden;
+      scrollbar-color: transparent transparent;
       > div > .flourish {
         transition: max-height 1s ease-in-out 1s;
         box-shadow: none !important;
