--- a/front/src/lib/styles/pages/home.css
+++ b/front/src/lib/styles/pages/home.css
@@ -12,22 +12,15 @@
   @apply dg--transition-effect;
   .bio-picture {
     position: relative;
-    opacity: 0.8;
     z-index: 5;
-    transition-property: border-color, opacity;
+    transition-duration: var(--transition-duration);
+    transition-property: border-color, opacity, filter;
     transition-timing-function: var(--transition-timing-function);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-      var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-    border: 1px solid rgba(var(--foreground-rgb), 0.5);
+    box-shadow: var(--shadow-elevation-low);
     border-radius: 50%;
     width: 120px;
     height: 120px;
     @apply dg--transition-effect;
-  }
-  &:hover {
-    .bio-picture {
-      opacity: 1;
-    }
   }
   h1.headline {
     transition: color, font-size;
@@ -77,16 +70,22 @@
     padding: 0.5rem;
     line-height: 1;
     a {
-      transition-property: color;
-      color: var(--soc-links-fg-clr);
-      @apply dg--transition-effect;
+      opacity: 0.3;
+      transition:
+        color 333ms,
+        opacity 200ms;
+      transition-timing-function: var(--transition-timing-function);
       @apply inline-block
         h-full
         self-center
         p-1;
       &:hover,
       &:focus {
-        color: var(--soc-links-fg-hover-clr);
+        opacity: 1;
+        transition:
+          color 200ms,
+          opacity 333ms;
+        transition-timing-function: var(--transition-timing-function);
       }
     }
     svg {
