--- a/front/src/lib/styles/components/posts-grid.css
+++ b/front/src/lib/styles/components/posts-grid.css
@@ -19,9 +19,7 @@
     grid-column: span 6;
     z-index: 1;
     cursor: pointer;
-    box-shadow:
-      inset 0 0 1px rgb(var(--subdued-rgb)),
-      0 0 0.3rem rgba(var(--black), 0.8);
+    box-shadow: var(--shadow-elevation-low);
     background-position: center top;
     background-size: cover;
     background-repeat: no-repeat;
@@ -29,13 +27,13 @@
     @apply mb-0
       h-full
       list-none
-      rounded-xl
-      text-center
-      backdrop-brightness-90;
-    &:hover,
+      text-center;
+    border-radius: 0.75rem;
+    /* backdrop-brightness-90 */
+    /* &:hover,
     &:focus {
       @apply backdrop-brightness-105;
-    }
+    } */
     &:first-child {
       grid-row: span 24;
       grid-column: span 6;
@@ -126,6 +124,18 @@
         py-3
         sm:py-6
         md:py-9;
+      &::before {
+        position: absolute;
+        z-index: 6;
+        mask:
+          linear-gradient(3deg, #fff 0 0) content-box,
+          linear-gradient(3deg, #fff 0 0);
+        mask-composite: exclude;
+        inset: 0;
+        border-radius: 0.75rem;
+        padding: 1px 1px 0 0;
+        content: '';
+      }
       .link-bg {
         align-self: center;
         transition: background-color 0.5s ease-in-out;
@@ -137,7 +147,7 @@
       &:hover,
       &:focus {
         .link-bg {
-          background-color: rgba(var(--background-saturated), 0.5);
+          background-color: rgba(var(--clr-blistre-dark-rgb), 0.5);
         }
       }
     }
@@ -147,7 +157,7 @@
 /* Theme Overrides */
 html.light-theme .posts-grid {
   .post-item {
-    box-shadow: inset 0 0 0;
+    /* box-shadow: inset 0 0 0; */
   }
   .post-link {
     @apply dg--photo-link-light;
